[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo"] }
itertools = "0.10.5"
libc = "0.2.140"
libloading = "0.7.4"
