[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["cargo"] }
itertools = "0.12.0"
libc = "0.2.151"
libloading = "0.8.1"
