[package]
name = "lab5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.1.11", features = ["derive"] }
nix = { version = "0.26.2", features = ["signal"] }
rand = "0.8.5"

