[package]
name = "lab7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
indicatif = "0.17.5"
itertools = "0.10.5"
num_cpus = "1.16.0"
rayon = "1.7.0"
scoped_threadpool = "0.1.9"
sha-crypt = "0.5.0"
